--- a/app/sass/base/_fonts.sass
+++ b/app/sass/base/_fonts.sass
@@ -1,4 +1,6 @@
 @import mixins
 
-+font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
-+font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold)
++font-face("Akrobat", "../fonts/AkrobatRegular/AkrobatRegular")
++font-face("Akrobat", "../fonts/AkrobatBold/AkrobatBold", 700)
++font-face("Akrobat", "../fonts/AkrobatLight/AkrobatLight", 300)
++font-face("Akrobat", "../fonts/AkrobatExtraBold/AkrobatExtraBold", 900)
