section intro complete

--- a/app/sass/layout/_header.sass
+++ b/app/sass/layout/_header.sass
@@ -1,3 +1,9 @@
+.ishome
+  .main-head
+    background-repeat: no-repeat
+    background-size: cover
+    background-position: center bottom
+
 .main-head
   +bg-cover
 
