--- a/app/sass/base/_mixins.sass
+++ b/app/sass/base/_mixins.sass
@@ -29,6 +29,6 @@
   right: 0
 
 @mixin gradient()
-  background-image: linear-gradient(45deg, #7fb400 0%, #508800 100%)
+  background-image: linear-gradient(135deg, #7fb400 0%, #508800 100%)!important
 
 
