--- a/app/sass/layout/_s-form.sass
+++ b/app/sass/layout/_s-form.sass
@@ -3,6 +3,9 @@
   background-repeat: no-repeat
   background-size: cover
   background-position: center bottom
+  background-color: transparent
+  position: relative
+  z-index: 2
   form
     position: relative
     left: -25px
