--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -9,6 +9,7 @@
 @import layout/s-intro
 @import layout/s-services
 @import layout/s-form
+@import layout/s-complex
 @import components/c-forms
 @import layout/footer
 
