section video complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -6,6 +6,9 @@
 // ≥1200px
 +media-breakpoint-down(lg)
 
+  .video-player, .video-item
+    height: 530px
+
   .complex-wrap
     flex-wrap: wrap
     .section-title
@@ -81,6 +84,9 @@
 
 // ≥992px
 +media-breakpoint-down(md)
+
+  .video-player, .video-item
+    height: 400px
 
   .services-wrap
     margin-bottom: 70px
@@ -190,6 +196,9 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .video-player, .video-item
+    height: 300px
 
   .s-complex
     padding-top: 0
