--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -10,6 +10,7 @@
 @import layout/s-services
 @import layout/s-form
 @import layout/s-complex
+@import layout/s-video
 @import components/c-forms
 @import layout/footer
 
