section faq complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -197,6 +197,26 @@
 // ≥480px
 +media-breakpoint-down(xs)
 
+  .s-faq
+    padding-top: 50px
+
+  .faq-wrap
+    padding: 25px 15px
+
+  .faq-item
+    &-quest
+      padding-left: 35px
+      font-size: 16px
+      &:before
+        width: 25px
+        height: 25px
+        font-size: 18px
+        top: -2px
+    &-ans
+      font-size: 14px
+      padding-left: 35px
+      padding-right: 10px
+
   .video-player, .video-item
     height: 300px
 
