--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -11,6 +11,7 @@
 @import layout/s-form
 @import layout/s-complex
 @import layout/s-video
+@import layout/s-faq
 @import components/c-forms
 @import layout/footer
 
