--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -12,6 +12,7 @@
 @import layout/s-complex
 @import layout/s-video
 @import layout/s-faq
+@import layout/s-contacts
 @import components/c-forms
 @import layout/footer
 
