--- a/app/sass/components/_c-forms.sass
+++ b/app/sass/components/_c-forms.sass
@@ -1,4 +1,5 @@
 form
+  background-color: #fbfbfb
   h3
     font-size: 24px
     font-weight: 700
@@ -31,6 +32,18 @@ form
   background-image: url('../img/bg-form.jpg')
   padding: 100px 180px 140px 40px
   +bg-cover
+
+.popup-form
+  position: relative
+  display: block
+  max-width: 600px
+  margin-left: auto
+  margin-right: auto
+  padding: 40px
+  background-color: #fbfbfb
+  &.thanks
+    padding: 75px 50px
+    text-align: center
 
 .agreement-label
   margin-bottom: 25px
