--- a/app/sass/layout/_header.sass
+++ b/app/sass/layout/_header.sass
@@ -86,8 +86,8 @@
       background-color: $accent-red
       a
         &:hover
-          background-color: darken($accent-red, 5%)
-          background-image: none
+          background-color: darken($accent-red, 5%)!important
+          background-image: none!important
   a
     display: block
     text-align: center
