--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -64,7 +64,7 @@ ul
   display: none!important
 // ======= END TEMPLATE STYLES =======
 
-.section-title
+.section-title, .page-title
   font-size: 50px
   font-weight: 900
   text-transform: uppercase
@@ -89,6 +89,10 @@ ul
     left: 32.5px
     bottom: 0
     background-color: #fff
+
+
+.page-title
+  padding-bottom: 15px
 
 .btn
   display: inline-block
@@ -192,6 +196,38 @@ ul
     opacity: .9
   &.mfp-removing.mfp-bg
     opacity: 0
+
+.isnohome
+  .main-head
+    background-position: center 8%
+
+.page-content
+  background-image: url('../img/bg-page.png')
+  +bg-cover
+  background-color: #fbfbfb
+
+.breadcrumbs
+  line-height: 1
+  padding: 22px 0
+  text-align: right
+  font-size: 14px
+  a
+    display: inline-block
+    color: #9a9a9a
+    position: relative
+    &:after
+      content: '/'
+      display: inline-block
+      margin-left: 4px
+      color: #9a9a9a
+    &:hover
+      color: $accent-green
+    &:last-child
+      pointer-events: none
+      &:after
+        display: none
+
+
 
 
 
