--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -13,6 +13,7 @@
 @import layout/s-video
 @import layout/s-faq
 @import layout/s-contacts
+@import pages/p-useful
 @import components/c-forms
 @import layout/footer
 
