page-about.html complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -254,6 +254,14 @@
 // ≥480px
 +media-breakpoint-down(xs)
 
+  .page-about
+    .page-title
+      padding-left: 0
+
+  .page-about-content
+    padding-left: 0
+    font-size: 16px
+
   .foot-logo
     padding: 0 15px
 
