--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -14,6 +14,7 @@
 @import layout/s-faq
 @import layout/s-contacts
 @import pages/p-useful
+@import pages/p-about
 @import components/c-forms
 @import layout/footer
 
