page-faq.html complete

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -15,6 +15,7 @@
 @import layout/s-contacts
 @import pages/p-useful
 @import pages/p-about
+@import pages/p-faq
 @import components/c-forms
 @import layout/footer
 
