page-servs.html complete

--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -112,6 +112,14 @@ ul
   color: #fff
   &:hover, &:focus, &:active
     background-color: darken($accent-red, 5%)
+    color: #fff
+
+.btn-green
+  color: #fff
+  +gradient
+  padding: 17px 22px
+  text-transform: none
+  font-weight: normal
 
 //preloader
 .preloader
