--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -106,6 +106,16 @@
 // ≥992px
 +media-breakpoint-down(md)
 
+  .serv
+    padding-left: 0
+    &-desc
+      flex-direction: column-reverse
+    &-part
+      width: 100%
+    &-img
+      height: 300px
+      margin-bottom: 30px
+
   .contacts-wrap
     flex-direction: column
     &.top
@@ -197,6 +207,21 @@
 // ≥768px
 +media-breakpoint-down(sm)
 
+  .serv-title
+    font-size: 30px
+    margin-bottom: 30px
+
+  .serv-desc
+    margin-bottom: 30px
+
+  .serv-bottom
+    flex-direction: column
+    align-items: center
+    .btn
+      margin-bottom: 15px
+      &:last-child
+        margin-bottom: 0
+
   .footer-wrap
     flex-wrap: wrap
 
@@ -253,6 +278,14 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .serv-title
+    font-size: 24px
+    line-height: 1.2
+
+  .serv
+    .btn-green
+      display: none
 
   .page-about
     .page-title
