--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -16,6 +16,7 @@
 @import pages/p-useful
 @import pages/p-about
 @import pages/p-faq
+@import pages/p-servs
 @import components/c-forms
 @import layout/footer
 
