page-reviews.html complete

--- a/app/sass/base/_libs.sass
+++ b/app/sass/base/_libs.sass
@@ -7,3 +7,4 @@
 @import "../libs/form-styler/jquery.formstyler.css"
 @import "../libs/form-styler/jquery.formstyler.theme.css"
 @import "../libs/magnificPopup/magnific-popup.css"
+@import '../libs/droppy-menu/droppy.min.css'
