--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -17,6 +17,7 @@
 @import pages/p-about
 @import pages/p-faq
 @import pages/p-servs
+@import pages/p-reviews
 @import components/c-forms
 @import layout/footer
 
