--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -106,6 +106,9 @@
 // ≥992px
 +media-breakpoint-down(md)
 
+  .review-item
+    width: 100%
+
   .serv
     padding-left: 0
     &-desc
@@ -207,6 +210,17 @@
 // ≥768px
 +media-breakpoint-down(sm)
 
+  .review-form
+    textarea
+      margin-bottom: 0
+
+  .review-form-bottom
+    flex-direction: column
+    align-items: flex-start
+    label
+      margin-bottom: 15px
+
+
   .serv-title
     font-size: 30px
     margin-bottom: 30px
@@ -278,6 +292,20 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .review-form
+    input
+      width: 100%
+
+  .review-item
+    flex-direction: column
+    padding-left: 0
+    &-img
+      width: 100%
+      height: 240px
+      margin-bottom: 15px
+    &-content
+      width: 100%
 
   .serv-title
     font-size: 24px
@@ -422,6 +450,9 @@
       width: 100%
 
 @media(max-width: 390px)
+
+  .body-form
+    padding: 50px 15px
 
   .popup-form
     padding: 40px 20px
