--- a/app/sass/layout/_header.sass
+++ b/app/sass/layout/_header.sass
@@ -74,20 +74,23 @@
 
 .main-mnu
   line-height: 1
-  ul
+  &>ul
     display: flex
     justify-content: space-between
+    &>li
+      &:last-child
+        background-color: $accent-red
+        a
+          &:hover
+            background-color: darken($accent-red, 5%)!important
+            background-image: none!important
   li
     flex-grow: 2
+    position: relative
     &.active
       a
         +gradient
-    &:last-child
-      background-color: $accent-red
-      a
-        &:hover
-          background-color: darken($accent-red, 5%)!important
-          background-image: none!important
+
   a
     display: block
     text-align: center
@@ -96,6 +99,34 @@
     color: #fff
     &:hover
       +gradient
+
+.droppy__drop
+  position: absolute
+  background-color: #000
+  z-index: 11
+  width: auto
+  max-width: 300px
+  a
+    display: block
+    padding: 14px 28px 14px 14px
+    text-align: left
+  ul
+    left: 100%
+    top: 0
+    width: 100%
+  li
+    position: relative
+  .droppy__parent
+    &:after
+      content: ''
+      position: absolute
+      width: 6px
+      height: 8px
+      background-image: url('../img/icons/next-arrow.png')
+      right: 10px
+      top: calc(50% - 4px)
+      +bg-cover
+
 
 .top-hamburger
   display: none
