page-contacts.html complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -106,6 +106,9 @@
 // ≥992px
 +media-breakpoint-down(md)
 
+  .page-contacts .contacts-wrap.top .contact-part.right-part
+    padding-left: 0
+
   .review-item
     width: 100%
 
