--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -18,6 +18,7 @@
 @import pages/p-faq
 @import pages/p-servs
 @import pages/p-reviews
+@import pages/p-contacts
 @import components/c-forms
 @import layout/footer
 
